<resources>
    <string name="app_name">TheBudgetApp</string>
    <string name="welcome">Welcome</string>
    <string name="start_here">Click here to start</string>

    <string name="budget_activity">Create a new Budget</string>
    <string name="transaction_Activity">Add a new Transaction</string>

    <string name="input_startBalance">Enter Starting Balance</string>
    <string name="input_name">Enter Budget Name</string>

    <string name="input_transaction">Enter Transaction Amount</string>
    <string name="input_vendor">Enter Vendor</string>
    <string name="input_category">Enter Category</string>
    <string name="input_description">Enter Description</string>

    <string name="button_save">SAVE</string>
    <string name="button_add">ADD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
