<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_Activity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:padding="16dp"
        />

    <EditText
        android:id="@+id/amount"
        android:hint="@string/input_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="6"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/vendor"
        android:hint="@string/input_vendor"
        android:layout_width="match_parent"
        android:maxLength="10"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/description"
        android:hint="@string/input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/category"
        android:hint="@string/input_category"
        android:layout_width="match_parent"
        android:maxLength="6"
        android:layout_height="wrap_content" />

    <DatePicker
        android:id="@+id/transactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>

    <Button
        android:text="@string/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveTransaction"/>
</LinearLayout>