<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget_activity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:padding="16dp"
        />

    <EditText
        android:id="@+id/startingBalance"
        android:hint="@string/input_startBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/budgetName"
        android:hint="@string/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/budgetCategory"
        android:hint="@string/input_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveBudget"
        android:text="@string/button_save" />
</LinearLayout>